--- a/.github/workflows/create-env-list.yml
+++ b/.github/workflows/create-env-list.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Run script
       run: |
         cd $GITHUB_WORKSPACE
-        node envOta.js --env=qyrus 1.10.0 --env=wm 1.11.0 --env=staging 1.7.7 --env=uat 1.7.7 
+        node envOta.js --env=qyrus 1.12.4 --env=wm 1.12.4 --env=qyrus-uk 1.12.4 --env=shawbrook 1.12.4  --env=unum 1.12.4  --env=tsb 1.12.4  --env=cleco 1.12.4  --env=monument 1.12.4  --env=johndeere 1.12.4  --env=truist 1.12.4  --env=rccd 1.12.4 --env=valley 1.12.4 --env=vitas 1.12.4 --env=ccep 1.12.4 --env=uat 1.12.4 --env=tccc 1.12.4 --env=staging 1.7.7  
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
     
