--- a/.github/workflows/create-env-list.yml
+++ b/.github/workflows/create-env-list.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Run script
       run: |
         cd $GITHUB_WORKSPACE
-        node envOta.js --env=qyrus 1.13.0 --env=wm 1.13.0 --env=qyrus-uk 1.13.0 --env=shawbrook 1.13.0  --env=unum 1.13.0  --env=tsb 1.13.0  --env=cleco 1.13.0  --env=monument 1.13.0  --env=johndeere 1.13.0  --env=truist 1.13.0  --env=rccd 1.13.0 --env=valley 1.13.0 --env=vitas 1.13.0 --env=ccep 1.13.0 --env=tccc 1.13.0 --env=huntington 1.13.0 --env=uat 1.8.9 --env=staging 1.8.9  
+        node envOta.js --env=qyrus 1.13.0 --env=wm 1.13.0 --env=qyrus-uk 1.13.0 --env=shawbrook 1.13.0  --env=unum 1.13.0  --env=tsb 1.13.0  --env=cleco 1.13.0  --env=monument 1.13.0  --env=johndeere 1.13.0  --env=truist 1.13.0  --env=rccd 1.13.0 --env=valley 1.13.0 --env=vitas 1.13.0 --env=ccep 1.13.0 --env=tccc 1.13.0 --env=huntington 1.13.0 --env=casella 1.13.0 --env=uat 1.8.9 --env=staging 1.8.9  
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
     
